# xlsx-workbook-diff

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_HANDOFF.md  LEGAL.md  LICENSE  NOTICE  PRODUCT_REQUIREMENTS.md  README.md  RELEASE_QUALIFICATION_CHECKLIST.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: SECURITY.txt  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/public/samples/: financial_after.xlsx  financial_before.xlsx  formula_after.xlsx  formula_ast_after.xlsx  formula_ast_before.xlsx  formula_before.xlsx  formula_only_before.xlsx  invoice_after.xlsx  invoice_before.xlsx  noise_after.xlsx  noise_before.xlsx  (+2 more)
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/sheet_diff/: __init__.py  charts.py  conditional.py  engine.py  formula.py  main.py  models.py  reports.py  storage.py  structure.py  style.py  tolerance.py
apps/worker/tests/: test_charts.py  test_conditional.py  test_diff.py  test_engine_qa.py  test_golden.py  test_golden_json.py  test_storage.py  test_structure.py  test_tolerance_fuzz.py
apps/worker/tests/golden/: invoice_summary.json
samples/: financial_after.xlsx  financial_before.xlsx  formula_only_after.xlsx  formula_same_val_after.xlsx  formula_same_val_before.xlsx  generate_samples.py  invoice_after.xlsx  invoice_before.xlsx  noise_after.xlsx  noise_before.xlsx  pricing_after.xlsx  pricing_before.xlsx
scripts/: copy-samples.mjs
(+17 files in other folders)
