[project]
name = "sheet-diff-worker"
version = "1.0.0"
description = "SheetDiff Python worker for XLSX workbook comparison"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "openpyxl>=3.1.5",
  "lxml>=5.3.0",
  "formulas>=1.2.8",
  "xlsxwriter>=3.2.0",
  "python-multipart>=0.0.12",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
